--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -3,13 +3,19 @@
 # https://docs.microsoft.com/azure/devops/pipelines/languages/docker
 
 trigger:
-- master
+  tags:
+    include:
+    - v*
+  branches:
+    include:
+    - master
 
 resources:
 - repo: self
 
 variables:
   tag: '$(Build.BuildId)'
+  tag_branch_name: '$(Build.SourceBranchName)'
 
 stages:
 - stage: Build
@@ -23,7 +29,10 @@ stages:
     - task: Docker@2
       displayName: Build an image
       inputs:
-        command: build
-        dockerfile: '$(Build.SourcesDirectory)/Dockerfile'
+        containerRegistry: 'registry.k8s-test.vcp.sh'
+        repository: 'nordlager-backend'
+        command: 'buildAndPush'
+        Dockerfile: '**/Dockerfile'
         tags: |
           $(tag)
+          $(tag_branch_name)
