--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,7 +15,10 @@ resources:
 
 variables:
   tag: '$(Build.BuildId)'
-  tag_branch_name: '$(Build.SourceBranchName)'
+  ${{ if eq( variables['Build.SourceBranchName'], 'master' ) }}:
+    tag_branch_name: 'latest'
+  ${{ if ne( variables['System.PullRequest.SourceBranch'], null ) }}:
+    tag_branch_name: ${{ variables['System.PullRequest.SourceBranch'] }}
 
 stages:
 - stage: Build
